<resources>
    <string name="app_name">Tip Calc App</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service_20">Amazing Service (20%)</string>
    <string name="good_service_18">Good Service (18%)</string>
    <string name="okay_service_15">Okay Service (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>